# motion_generation

./: .gitignore  pyproject.toml
src/motion_generation/dataset/: __init__.py  transcript_pose.py
src/motion_generation/embedding/: __init__.py  composite.py  word2vec.py
src/motion_generation/models/: __init__.py  decoder.py  gesture.py  rnn.py  x_gesture.py
src/motion_generation/scripts/: render_video.py  save_attn.py  try_decoder.py  try_gesture.py  try_xgesture.py
src/motion_generation/tests/: gpu.py  save_reload.py  transcript_pose.py  word2vec_emb.py
src/motion_generation/tokenizer/: __init__.py  __main__.py  tokenizer.py
src/motion_generation/train/: dtrain.py  rnn_train.py  train.py  xtrain.py
tests/cache/: transcript_pose_fallon_dev.pt
