[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motion-generation"
version = "0.1.0"
description = "Transformer-based transcript-to-pose generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.4.0",
    "motion-quantization",
    "x-transformers>=2.14.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
motion-quantization = { path = "../motion_quantization", editable = true }
